...
        NavigationStack {
            VStack {
                ScrollView {
                    VStack {
                        headerView
                        CurrentWeatherView()
                            .accessibilityIdentifier("currentWeatherView")
                        HourlyForecastView()
                        ExtendedForecastView()
                    }
                    .padding(.top, 2)
                }
                .background(
...
                }
            }
            .padding(8)
            .whiteBackground()
            .roundedCorners()
        }
        .accessibilityIdentifier("locationMenuView")
        .padding()
    }
}

#Preview {
    MainView(preferredColumn: .constant(.detail))
...
