...
                        }
                        
                        Spacer()
                    }
                    .padding()
                }
                .accessibilityIdentifier("extendedForecastScrollView")
            }
        }
        .onAppear {
            // This works for iOS well, but will need to be fixed in iPadOS, Mac, etc...
            width = UIScreen.main.bounds.width / 2
            height = UIScreen.main.bounds.height / 4
...
