...
                            .whiteBackground()
                            .roundedCorners()
                        }
                    }
                    .padding()
                }
                .accessibilityIdentifier("hourlyForecastScrollView")
            }
        }
        .onAppear {
            width = UIScreen.main.bounds.width / 6
        }
        .animation(.easeInOut, value: isLoading)
...
